extends context, thanks to @raine for the suggestion.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "ramda-repl"
   ],
   "dependencies": {
-    "ramda": "^0.17.1"
+    "ramda": "^0.17.1",
+    "repl.history": "^0.1.3"
   },
   "devDependencies": {}
 }
