--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "dependencies": {
     "ramda": "^0.19.1",
     "ramda-fantasy": "^0.4.0",
-    "repl.history": "^0.1.3"
+    "repl.history": "^0.1.3",
+    "chalk": "^1.0.0"
   },
   "devDependencies": {}
 }
